fix advancements strings once and for all+code cleanup
use ModContainer::findPath and Files::newInputStream
instead of fabric impl LoaderModMetadata and Class::getResourceAsStream